--- a/system_id/plots/training_data.tex
+++ b/system_id/plots/training_data.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[!htb]
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
@@ -6,7 +6,7 @@
             ylabel = North velocity,
             x unit = \si{\second},
             y unit = \si{\radian},
-            xmin = 0,   xmax = 120,
+            xmin = 0,   xmax = 200,
             ymin = -2.5,  ymax = 2.5,
             grid = major,
             legend cell align = left,
