--- a/system_id/plots/MAE_vs_Ts_vs_L.tex
+++ b/system_id/plots/MAE_vs_Ts_vs_L.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{DMD prediction error using different cable lengths with a range of different sample times of noisy training data
-    ($m =$~\SI{0.2}{\kilo\gram}, $T_{train} =$~various??.)}
-    % \label{fig:havok_vs_dmd_noise}
+    ($m =$~\SI{0.2}{\kilo\gram})}
+    \label{fig:MAE_vs_Ts_vs_L}
 \end{figure}
