--- a/system_id/plots/MAE_vs_q.tex
+++ b/system_id/plots/MAE_vs_q.tex
@@ -6,8 +6,8 @@
             ylabel = MAE,
             % x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 40,
-            ymin = 0.09,  ymax = 0.15,
+            xmin = 2,     xmax = 40,
+            ymin = 0.085,  ymax = 0.135,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -40,5 +40,5 @@
     
     \caption{DMD and HAVOK predictions error for different lengths of noisy training data
     ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
-    \label{fig:havok_vs_dmd_noise}
+    \label{fig:NMAE_vs_q}
 \end{figure}
